Culminación de la ventana de leaderboards y agregacion a conexión y desconexión del jugador

--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.resx
@@ -330,10 +330,25 @@
   <data name="btn_JoinMatch" xml:space="preserve">
     <value>Join match</value>
   </data>
-	<data name="globalTxtb_PasswordIndications" xml:space="preserve">
+  <data name="globalTxtb_PasswordIndications" xml:space="preserve">
     <value>Remember that your password must contain at least 8 characters. Including at least 1 number, 1 capital letter, 1 lowercase letter and 1 special character.</value>
   </data>
   <data name="lbl_TitleRecoverPassword" xml:space="preserve">
     <value>Recover Password</value>
+  </data>
+  <data name="globalLbl_PasswordIndications" xml:space="preserve">
+    <value />
+  </data>
+  <data name="dialogNoPersonalLeaderboard" xml:space="preserve">
+    <value>Couldn't find the specific personal leaderboard.</value>
+  </data>
+  <data name="dialogExistingSession" xml:space="preserve">
+    <value>You can't join the game, the same account is playing on another device.</value>
+  </data>
+  <data name="dialogCouldntFindUserSession" xml:space="preserve">
+    <value>Couldn't find user session </value>
+  </data>
+  <data name="dialogErrorInDisconnection" xml:space="preserve">
+    <value>Couldn't close users session, please try again.</value>
   </data>
 </root>
