--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.resx
@@ -337,7 +337,7 @@
     <value>Recover Password</value>
   </data>
   <data name="globalLbl_PasswordIndications" xml:space="preserve">
-    <value />
+    <value>Remeber that your password must contain at least 8 characters. Including at least 1 number, 1 capital letter, 1 lowercase letter and 1 special character.</value>
   </data>
   <data name="dialogNoPersonalLeaderboard" xml:space="preserve">
     <value>Couldn't find the specific personal leaderboard.</value>
@@ -350,5 +350,20 @@
   </data>
   <data name="dialogErrorInDisconnection" xml:space="preserve">
     <value>Couldn't close users session, please try again.</value>
+  </data>
+  <data name="txtbl_Disconnected" xml:space="preserve">
+    <value>Offline</value>
+  </data>
+  <data name="txtbl_Online" xml:space="preserve">
+    <value>Online</value>
+  </data>
+  <data name="globalDialog_PartialDisconnection" xml:space="preserve">
+    <value>Partial discconnection, couldn´t disconnect the player at all.</value>
+  </data>
+  <data name="dialogCouldntLobbyDisconnection" xml:space="preserve">
+    <value>Couldn't discconect the player from the lobby, try it again.</value>
+  </data>
+  <data name="dialogConfirmLeaveLobby" xml:space="preserve">
+    <value>Are you sure to leave the lobby?</value>
   </data>
 </root>
