--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.en-US.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.en-US.resx
@@ -366,4 +366,28 @@
   <data name="dialogConfirmLeaveLobby" xml:space="preserve">
     <value>Are you sure to leave the lobby?</value>
   </data>
+  <data name="dialogConfirmationMatchCreation" xml:space="preserve">
+    <value>Do you want to create a new match?</value>
+  </data>
+  <data name="txtb_Host" xml:space="preserve">
+    <value>Host</value>
+  </data>
+  <data name="txtb_HostName" xml:space="preserve">
+    <value>Host name</value>
+  </data>
+  <data name="txtb_Guest" xml:space="preserve">
+    <value>Guest</value>
+  </data>
+  <data name="txtb_GuestName" xml:space="preserve">
+    <value>Guest name</value>
+  </data>
+  <data name="dialogNotExistingCode" xml:space="preserve">
+    <value>The code for the match that you type, does not exist, verify and try it again.</value>
+  </data>
+  <data name="dialogFullLobby" xml:space="preserve">
+    <value>Sorry, the lobby that you want to join is already full.</value>
+  </data>
+  <data name="dialogHostHasLeft" xml:space="preserve">
+    <value>The host of the lobby has left, you will be redirected to the main menu.</value>
+  </data>
 </root>
