--- a/HiveGameClient/HiveGameWPFApp/Properties/Resources.es-MX.resx
+++ b/HiveGameClient/HiveGameWPFApp/Properties/Resources.es-MX.resx
@@ -431,6 +431,7 @@
   </data>
   <data name="lbl_Lenguage" xml:space="preserve">
     <value>Idioma</value>
+  </data>
   <data name="dialogEmailInvitationSend" xml:space="preserve">
     <value>La invitación de partida ha sido enviada al usuario seleccionado.</value>
   </data>
@@ -442,5 +443,11 @@
   </data>
   <data name="dialogYouveBeenKick" xml:space="preserve">
     <value>Has sido expulsado de la sala.</value>
+  </data>
+  <data name="btn_SendOffPlayer" xml:space="preserve">
+    <value>Expulsar a un jugador</value>
+  </data>
+  <data name="btn_Start" xml:space="preserve">
+    <value>Iniciar</value>
   </data>
 </root>
